syntax = "proto3";

package user;

option go_package = "github.com/fairuzald/library-system/proto/user";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
  rpc ChangePassword(ChangePasswordRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (TokenResponse);
  rpc Logout(LogoutRequest) returns (google.protobuf.Empty);
  rpc Health(google.protobuf.Empty) returns (HealthResponse);
}

message User {
  string id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  string status = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  optional string phone = 10;
  optional string address = 11;
  optional google.protobuf.Timestamp last_login = 12;
}

message GetUserRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  optional string sort_by = 3;
  optional bool sort_desc = 4;
  optional string role = 5;
  optional string status = 6;
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
  string role = 6;
  optional string phone = 7;
  optional string address = 8;
}

message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string username = 3;
  optional string first_name = 4;
  optional string last_name = 5;
  optional string role = 6;
  optional string status = 7;
  optional string phone = 8;
  optional string address = 9;
}

message DeleteUserRequest {
  string id = 1;
}

message ChangePasswordRequest {
  string id = 1;
  string current_password = 2;
  string new_password = 3;
}

message LoginRequest {
  string username_or_email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
  User user = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message LogoutRequest {
  string access_token = 1;
}

message TokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string token_type = 3;
  int64 expires_in = 4;
}

message UserResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
  int64 total_items = 2;
  int32 total_pages = 3;
  int32 current_page = 4;
  int32 page_size = 5;
}

message HealthResponse {
  string status = 1;
  string version = 2;
}
